[package]
name = "cln-zapper"
version = "0.1.0"
edition = "2021"
authors = ["thesimplekid"]
license = "BSD 3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4"
cln-plugin = "0.1.2"
cln-rpc = "0.1.2"
serde = "1"
serde_json = "1"
tokio = { version = "1.26.0", features = [ "full" ] }
nostr-sdk = { version = "0.19.0", default_features = false, features=["nip19"] }