[package]
name = "cln-zapper"
version = "0.2.2"
edition = "2021"
authors = ["thesimplekid"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/thesimplekid/cln-zapper-rs"
description = "Core Lightning plugin for sending zap (NIP-57) notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4"
# cln-plugin = "0.1.2"
cln-plugin = { git = "https://github.com/ElementsProject/lightning" }
cln-rpc = "0.1.2"
futures = "0.3.26"
serde = "1"
serde_json = "1"
tokio = { version = "1.26.0", features = [ "full" ] }
nostr = { version = "0.19.5", default_features = false, features = ["nip19"] }
tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"]}
dirs = "4.0"